--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,5 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
+exclude: [ "layout_archive" ]
+excerpt_separator: "<!--more-->"
