--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,5 @@ url: "http://locahost:4000" # the base hostname & protocol for your site
 markdown: kramdown
 exclude: [ "layout_archive", "utils" ]
 excerpt_separator: "<!--more-->"
-group_name: "PLS"
+group_short: "PLS"
+group_name: "Programming, Logics, and Systems"
