--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Programming, Logics, and Systems research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
+permalink: /events/:year-:month-:day-:title
 # Build settings
+incremental: true
 markdown: kramdown
 exclude: [ "layout_archive", "utils" ]
 excerpt_separator: "<!--more-->"
