added no_publications file for fast compilation
remove or rename file "no_publications" to compile the whole paper bibliography

--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,4 @@ exclude: [ "layout_archive", "utils" ]
 excerpt_separator: "<!--more-->"
 group_short: "PLS"
 group_name: "Programming, Logics, and Systems"
+exclude: [ "no_publications" ]
