--- a/_data/research-areas.json
+++ b/_data/research-areas.json
@@ -1,26 +1,85 @@
 [
-        {
-                "title" : "Research Areas", 
-                "elements" : [
-                        { "title" : "Area 1", "description" : "Description 1" },
-                        { "title" : "Area 2", "description" : "Description 2" },
-                        { "title" : "Area 3", "description" : "Description 3" }
-                ]
-        },
-        {
-                "title" : "Research Topics",
-                "elements" : [
-                        { "title" : "Topic 1", "description" : "Description 1" },
-                        { "title" : "Topic 2", "description" : "Description 2" },
-                        { "title" : "Topic 3", "description" : "Description 3" }
-                ]
-        },
-        {
-                "title" : "Research Applications",
-                "elements" : [
-                        { "title" : "Application 1", "description" : "Description 1" },
-                        { "title" : "Application 2", "description" : "Description 2" },
-                        { "title" : "Application 3", "description" : "Description 3" }
-                ]
-        }
+       {
+             "title" : "Application to Society",
+             "id" : "sa",
+             "elements" : [
+                { 
+                        "title" : "Digital Transformation", 
+                        "description" : "Digital Transformation", 
+                        "id": "dt"
+                },
+                {
+                        "title" : "Cloud Computing", 
+                        "description" : "Cloud Computing", 
+                        "id": "cc"
+                },
+                {
+                        "title" : "Reliable Computing", 
+                        "description" : "Reliable Computing", 
+                        "id": "rc"
+                }
+        ]
+     },
+     {
+             "title" : "Research Areas",
+             "id" : "ra",
+                   "elements" : [
+                { 
+                        "title" : "Software Engineering", 
+                        "description" : "Software Engineering", 
+                        "id": "se"
+                },
+                { 
+                        "title" : "Applied Logic", 
+                        "description" : "Applied Logic", 
+                        "id": "al"
+                },
+                { 
+                        "title" : "Concurrency Theory", 
+                        "description" : "Concurrency Theory", 
+                        "id": "ct"
+                },
+                { 
+                        "title" : "Programming Languages", 
+                        "description" : "Programming Languages", 
+                        "id": "pl"
+                }
+        ]
+     },
+     {
+             "title" : "Research Topics",
+             "id" : "rt",
+                   "elements" : [
+                { 
+                        "title" : "Microservices", 
+                        "description" : "Microservices", 
+                        "id": "ms"
+                },
+                { 
+                        "title" : "DevOps", 
+                        "description" : "DevOps", 
+                        "id": "do"
+                },
+                { 
+                        "title" : "Choreographic Programming", 
+                        "description" : "Choreographic Programming", 
+                        "id": "cp"
+                },
+                { 
+                        "title" : "Theorem Proving", 
+                        "description" : "Theorem Proving", 
+                        "id": "tp"
+                },
+                { 
+                        "title" : "Data Consistency", 
+                        "description" : "Data Consistency", 
+                        "id": "dc"
+                },
+                { 
+                        "title" : "Quantitative Models", 
+                        "description" : "Quantitative Models", 
+                        "id": "qm"
+                }
+        ]
+     }
 ]
