--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Programming, Logics, and Systems
-email: pls@imada.sdu.dk
+title: Programming Languages, Systems, and Logic
+email: psl@imada.sdu.dk
 description: > # this means to ignore newlines until "baseurl:"
-  Programming, Logics, and Systems research group website.
+  Programming Languages, Systems, and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
 permalink: /events/:year-:month-:day-:title
@@ -11,6 +11,7 @@ incremental: true
 markdown: kramdown
 exclude: [ "layout_archive", "utils" ]
 excerpt_separator: "<!--more-->"
-group_short: "PLS"
-group_name: "Programming, Logics, and Systems"
+group_short: "PSL"
+group_name: "Programming Languages, Systems, and Logic"
 exclude: [ "no_publications" ]
+incremental: false
