--- a/_data/research-areas.json
+++ b/_data/research-areas.json
@@ -5,7 +5,7 @@
              "elements" : [
                 {
                         "title" : "Cloud Computing", 
-                        "description" : "Cloud Computing", 
+                        "description" : "Cloud computing is a new paradigm that enables the ubiquitous access to pools of computing resources that can be rapidly provisioned with minimal management effort. Since the launch of Amazon EC2 in 2006, cloud computing has revolutionize the software development, allowing the developers to partially abstract from the computing medium and develop applications that can be deployed in matter of minutes and can easily scale based on the request load. More than 50% of organizations are using the cloud to message, store data, and compute.", 
                         "id": "cc"
                 },
                 { 
@@ -62,7 +62,7 @@
                 },
                 { 
                         "title" : "DevOps", 
-                        "description" : "DevOps is a software engineering collections of practices to link the software development (Dev) with software operation (Ops). DevOps strongly advocates for automation and monitoring at all steps of software construction, from integration, testing, releasing to deployment and infrastructure management. By using DevOps methodology it is possible to reduce the time between committing a change to a system and the change being placed into normal production, while ensuring high quality.", 
+                        "description" : "DevOps is a software engineering collections of practices to link the software development (Dev) with software operations (Ops). DevOps strongly advocates for automation and monitoring at all steps of software construction, from integration, testing, releasing to deployment and infrastructure management. By using DevOps methodology it is possible to reduce the time between committing a change to a system and the change being placed into normal production, while ensuring high quality.", 
                         "id": "do"
                 },
                 { 
