--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: psl@imada.sdu.dk
 description: > # this means to ignore newlines until "baseurl:"
   Programming Languages, Systems, and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://locahost:4000" # the base hostname & protocol for your site
+url: "http://psl.sdu.dk" # the base hostname & protocol for your site
 permalink: /events/:year-:month-:day-:title
 # Build settings
 incremental: true
