--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Programming Languages, Systems, and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://psl.sdu.dk" # the base hostname & protocol for your site
-permalink: /events/:year-:month-:day-:title
+permalink: /events/:year-:month-:day-:title.html
 # Build settings
 incremental: true
 markdown: kramdown
