--- a/_config_development.yml
+++ b/_config_development.yml
@@ -1,18 +1,17 @@
 # Site settings
-title: Programming Languages, Systems, and Logic
-email: psl@imada.sdu.dk
+title: Concurrency and Logic
+email: concurrency@imada.sdu.dk
 description: > # this means to ignore newlines until "baseurl:"
-  Programming Languages, Systems, and Logic research group website.
+  Concurrency and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://localhost:4000" # the base hostname & protocol for your site
 permalink: /events/:year-:month-:day-:title.html
 # Build settings
 incremental: true
 markdown: kramdown
-exclude: [ "layout_archive", "utils", "areas.md"  ]
 excerpt_separator: "<!--more-->"
-group_short: "PSL"
-group_name: "Programming Languages, Systems, and Logic"
-exclude: [ "images/communities.graffle"]
+group_short: "CL"
+group_name: "Concurrency and Logic"
+exclude: [ "layout_archive", "utils", "images/communities.graffle", "areas.md", "README.md"]
 incremental: false
 no_publications: true
