--- a/_data/master_projects.json
+++ b/_data/master_projects.json
@@ -1,2 +1,19 @@
 [
+  { 
+    "title" : "Choreographic Programming",
+    "description" : "Choreographic Programming is a new programming paradigm where programmers write specifications of how concurrent programs should interact, and then a compiler automatically generates code that is guaranteed to be correct and deadlock-free. As a young paradigm, there are a lot of useful and interesting open questions, both on the theoretical and practical levels: efficient and safe programming primitives for concurrent access to shared resources; automatic deployment of code generated from choreographies in cloud environments; specifying and proving safety properties of choreographies (e.g., liveness, security, and privacy properties); integrating choreographic programming with mainstream programming languages and frameworks; exploring the theoretical limits of choreographic programming and its relationship to standard models of computing.",
+    "image" : "",
+    "contact" : "Luís Cruz-Filipe"
+  },
+  { 
+    "title" : "Optimal sorting networks",
+    "description" : "Sorting networks are very simple hardware circuits that sort inputs of fixed size n by executing a predetermined sequence of binary compare-and-swap operations. Each operation costs time and energy, and thus it is important to find sorting networks that are as small as possible. However, finding optimal sorting networks is an extremely complex problem that has only been solved for a few small values of n by ingenious combinations of combinatorial techniques, mathematical insights, and clever programming of search algorithms. If you have a background in Mathematics or Computer Science and are looking for a problem that requires a new, creative approach, then this project is for you!",
+    "image" : "",
+    "contact" : "Luís Cruz-Filipe"
+  },
+  {
+    "title" : "Automatizing Application Deployment on the Cloud",
+    "description" : "Deployment of sophisticated distributed software applications requires a deep knowledge on the cloud infrastructure and on the application to deploy. For this reasons attempts are developed to simplify and better automate the process of deploying application (DevOps). The goal of this thesis is to enhance and develop tools (e.g., based on machine learning, local search, genetic algorithms, constraint programming) to tackle some of the computational issues for automatizing the deployment of applications in the cloud, and especially the optimization of the resource usage.",
+    "contact" : "Jacopo Mauro"
+  }
 ]
