concurrency theory logo

--- a/_data/master_projects.json
+++ b/_data/master_projects.json
@@ -19,6 +19,7 @@
   {
     "title": "Concurrency Theory",
     "description": "Many modern digital systems (as in the Internet of Things, Industry 4.0, and Cloud Computing) are highly concurrent: they carry out multiple activities at the same time and include massive numbers of actors that communicate to exchange data, using multiple CPUs and large-scale networks. Concurrency theory offers solid methodologies to conceptualise these systems, identify problems, and support decision making. Subjects for projects range from pure theory to implementations of theoretical models: quantitative properties of concurrent systems such as availability, efficiency, performance, reliability, robustness, safety, security, survivability, and timeliness; automatic verification of security protocols; new programming approaches for concurrency (e.g., transactional memories); inductive and coinductive proof methods and their applications (e.g., for infinite behaviours, as in service-oriented systems).",
+    "image": "images/dining-philosopher.png",
     "contact": "Luís Cruz-Filipe"
   },
   {
