--- a/_config_development.yml
+++ b/_config_development.yml
@@ -11,6 +11,6 @@ markdown: kramdown
 excerpt_separator: "<!--more-->"
 group_short: "CL"
 group_name: "Concurrency and Logic"
-exclude: [ "layout_archive", "utils", "images/communities.graffle", "areas.md", "README.md"]
+exclude: [ "docker", "layout_archive", "utils", "images/communities.graffle", "areas.md", "README.md"]
 incremental: true
 no_publications: true
