Fix docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,4 +8,4 @@ RUN git clone --depth=1 https://github.com/fmontesi/group-website.git /www
 
 # Start from scratch, copy the installer, install, remove the installer.
 FROM jolielang/leonardo
-COPY --from=Build /www/_site /var/lib/leonardo/www
+COPY --from=Build /www/web/_site /var/lib/leonardo/www
