--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,11 +6,11 @@ RUN apk update && \
 		apk add git
 RUN git clone --depth=1 https://github.com/fmontesi/group-website.git /git
 
-FROM jekyll/jekyll as Build
+FROM ruby as Build
 COPY --from=Source /git/web /srv/jekyll
-RUN chown -R jekyll:jekyll /srv/jekyll
-RUN bundle update
-RUN jekyll build
+WORKDIR /srv/jekyll
+RUN bundle install
+RUN bundle exec jekyll build
 RUN mv /srv/jekyll/_site /site
 
 FROM jolielang/leonardo
