--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -1,6 +1,9 @@
 - name: "Tomasz Brengos"
   from: 25th June
   to: 5th July 2017
+  affiliation: Warsaw University of Technology
+  description: |
+    Tomasz visited Marco Peressotti ...
 
 # - name: "Thomas T. Hildebrandt"
 #   from: 2016-06-25
