--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -1,14 +1,6 @@
-- name: "Tomasz Brengos"
-  from: 25th June
-  to: 5th July 2017
+- name: Tomasz Brengos
+  from: 2017-06-25
+  to: 2017-07-05
   affiliation: Warsaw University of Technology
   description: |
     Tomasz visited Marco Peressotti ...
-
-# - name: "Thomas T. Hildebrandt"
-#   from: 2016-06-25
-#   to: 2016-06-25
-
-# - name: "Agata Murawska"
-#   from: 2015-06-25
-#   to: 2015-06-25
