tweakes to the seminar&visitor page

--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -2,5 +2,7 @@
   from: 2017-06-25
   to: 2017-07-05
   affiliation: Warsaw University of Technology
+  website: https://www.mini.pw.edu.pl/~tbrengos/
+  host: Marco Peressotti
   description: |
-    Tomasz visited Marco Peressotti ...
+    Tomasz Brengos visited the CL group to conduct research on the behavioural theory of timed and Büchi automa. This visit is part of an ongoing collaboration between Tomasz Brengos and Marco Peressotti.
