--- a/web/_config.yml
+++ b/web/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Concurrency and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://concurrency.sdu.dk" # the base hostname & protocol for your site
-permalink: /events/:year-:month-:day-:title.html
+permalink: /news/:year-:month-:day-:title.html
 # Build settings
 incremental: true
 markdown: kramdown
