--- a/web/_config_development.yml
+++ b/web/_config_development.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Concurrency and Logic research group website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://localhost:4000" # the base hostname & protocol for your site
-permalink: /events/:year-:month-:day-:title.html
+permalink: /news/:year-:month-:day-:title.html
 # Build settings
 markdown: kramdown
 excerpt_separator: "<!--more-->"
