--- a/web/_data/master_projects.json
+++ b/web/_data/master_projects.json
@@ -28,8 +28,13 @@
     "contact": "Jacopo Mauro"
   },
   {
-    "title": "Optimal sorting networks",
-    "description": "Sorting networks are very simple hardware circuits that sort inputs of fixed size n by executing a predetermined sequence of binary compare-and-swap operations. Each operation costs time and energy, and thus it is important to find sorting networks that are as small as possible. However, finding optimal sorting networks is an extremely complex problem that has only been solved for a few small values of n by ingenious combinations of combinatorial techniques, mathematical insights, and clever programming of search algorithms. If you have a background in Mathematics or Computer Science and are looking for a problem that requires a new, creative approach, then this project is for you!",
+    "title": "Optimal Sorting Networks",
+    "description": "Sorting networks are very simple hardware circuits that sort inputs of fixed size <i>n</i> by executing a predetermined sequence of binary compare-and-swap operations. Each operation costs time and energy, and thus it is important to find sorting networks that are as small as possible. However, finding optimal sorting networks is an extremely complex problem that has only been solved for a few small values of <i>n</i> by ingenious combinations of combinatorial techniques, mathematical insights, and clever programming of search algorithms. If you have a background in Mathematics or Computer Science and are looking for a problem that requires a new, creative approach, then this project is for you!",
+    "contact": "Luís Cruz-Filipe"
+  },
+  {
+    "title": "Verified SAT Solving",
+    "description": "SAT solving tools these days are able to prove unsatisfiability of increasingly large propositional formulas. However, they do so by applying extremely complex algorithms whose correctness it is unfeasible to verify. In order to trust their results, one needs them to output a certificate of unsatisfiability that can be efficiently verified independently. Currently, the languages for such certificates cannot support all the techniques used in SAT solving. The goal of this project is to extend certification languages to cater for hitherto unconvered techniques and develop efficient algorithms for dealing with these extensions.",
     "contact": "Luís Cruz-Filipe"
   },
   {
