--- a/web/_plugins/paper_icon_mapping.json
+++ b/web/_plugins/paper_icon_mapping.json
@@ -7,5 +7,6 @@
 "website" : "fa fa-desktop",
 "video" : "fa fa-video",
 "slides" : "fa fa-list-alt",
+"slideshare" : "fab fa-slideshare",
 "generic" : "fa fa-link"
 }
