--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -14,6 +14,7 @@
   to: 2019-02-15
   affiliation: University of Lisbon, Portugal
   website: http://www.di.fc.ul.pt/~in/
+  picture: images/people/inunes-p.jpg
   host: Luís Cruz-Filipe
   office: 
     label: Ø16-601a-2
