--- a/web/_plugins/paper_icon_mapping.json
+++ b/web/_plugins/paper_icon_mapping.json
@@ -8,5 +8,6 @@
 "video" : "fa fa-video",
 "slides" : "fa fa-list-alt",
 "slideshare" : "fab fa-slideshare",
-"generic" : "fa fa-link"
+"generic" : "fa fa-link",
+"errata" : "fas fa-exclamation-circle"
 }
