--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -35,6 +35,10 @@
   affiliation: University of Bologna, Italy
   website: https://cs.unibo.it/~stefanopio.zingaro/
   picture: images/people/spzingaro-p.jpg
+  email: stefanopio.zingaro@unibo.it
+  dblp: 220/4883
+  google_scholar: u4YiPCwAAAAJ
+  github: szingaro
   host: Fabrizio Montesi
   office: 
     label: Ø18-511a-2
