--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -1,4 +1,4 @@
-- name: Ornella Dardha
+- name: Ornela Dardha
   from: 2020-01-27
   to: 2020-01-30
   affiliation: University of Glasgow, United Kingdom
