--- a/web/_config.yml
+++ b/web/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: Concurrency and Logic
+title: Artificial Intelligence, Cybersecurity, and Programming Languages
 email: concurrency@imada.sdu.dk
 description: > # this means to ignore newlines until "baseurl:"
-  Concurrency and Logic research group website.
+  
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://concurrency.sdu.dk" # the base hostname & protocol for your site
+url: "https://acp.sdu.dk" # the base hostname & protocol for your site
 permalink: /news/:year-:month-:day-:title.html
 # Build settings
 incremental: true
 markdown: kramdown
 excerpt_separator: "<!--more-->"
-group_short: "CL"
-group_name: "Concurrency and Logic"
+group_short: "ACP"
+group_name: "Artificial Intelligence, Cybersecurity, and Programming Languages"
 exclude: [ "docker", "layout_archive", "utils", "images/communities.graffle", "areas.md", "README.md"]
 incremental: false
 no_publications: false
